[package]
name = "n2o"
version = "0.1.0"
edition = "2021"

[dependencies]
warp = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
chrono = "0.4"
csv = "1.1"

[lib]
name = "n2o"
path = "src/lib.rs"

[profile.dev]
incremental = true
